--- a/content/_toc.yml
+++ b/content/_toc.yml
@@ -7,19 +7,21 @@ parts:
 
   - caption: Advection
     chapters:
-    - file: advection/advection-intro
+    - file: advection-intro
+    - file: advection/advection-test-problem
+    - file: advection/advection-finite-volumes
+    - file: advection/advection-grid-class
+    - file: advection/advection-time-update
+    - file: advection/advection-driver
+    - file: advection/advection-convergence
+    - file: advection/advection-second-order
+
+   - caption: Advection Exercises
+     chapters:
+     - file: advection/burgers
       sections:
-      - file: advection/advection/advection-test-problem
-      - file: advection/advection/advection-finite-volumes
-      - file: advection/advection/advection-grid-class
-      - file: advection/advection/advection-time-update
-      - file: advection/advection/advection-driver
-      - file: advection/advection/advection-second-order
-      - file: advection/advection/advection-convergence
-    - file: advection/burgers/burgers
-      sections:
-      - file: advection/burgers/burgers-riemann
-      - file: advection/burgers/burgers-methods
+      - file: advection/burgers-riemann
+      - file: advection/burgers-methods
 
   - caption: Hydrodynamics
     chapters:
