add another exercise

--- a/content/_toc.yml
+++ b/content/_toc.yml
@@ -19,6 +19,7 @@ parts:
 
   - caption: Advection Exercises
     chapters:
+    - file: advection/advection-exercises-limiter
     - file: advection/burgers
       sections:
       - file: advection/burgers-riemann
